fix z-index

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+
+}
+
+
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -35,3 +40,4 @@ body {
   background: blue;
   transform-origin: 0%;
 }
+
